CC-38689: fix tabs on mobile

--- a/src/Pyz/Yves/MerchantProductOfferWidget/Theme/default/components/molecules/seller-list-item/seller-list-item.scss
+++ b/src/Pyz/Yves/MerchantProductOfferWidget/Theme/default/components/molecules/seller-list-item/seller-list-item.scss
@@ -34,6 +34,14 @@
             white-space: nowrap;
         }
 
+        &__meta {
+            display: flex;
+            flex: 0 0 auto;
+            flex-direction: column;
+            align-items: flex-end;
+            gap: var(--scale-2);
+        }
+
         &__price {
             display: inline-flex;
             flex: 0 0 auto;
