--- a/src/Pyz/Yves/ProductReviewWidget/Theme/default/components/molecules/review-average-display/review-average-display.scss
+++ b/src/Pyz/Yves/ProductReviewWidget/Theme/default/components/molecules/review-average-display/review-average-display.scss
@@ -8,7 +8,7 @@
         margin: 0 auto;
         text-align: center;
 
-        @include helper-breakpoint-media-min($lg) {
+        @include helper-breakpoint-media-min($xl) {
             margin-right: rem(var(--scale-64));
         }
 
