--- a/src/Pyz/Yves/ProductReviewWidget/Theme/default/components/organisms/review-summary/review-summary.scss
+++ b/src/Pyz/Yves/ProductReviewWidget/Theme/default/components/organisms/review-summary/review-summary.scss
@@ -25,7 +25,7 @@
             background: var(--background-highlight);
             border-radius: var(--radius-sm);
 
-            @include helper-breakpoint-media-min($lg) {
+            @include helper-breakpoint-media-min($xl) {
                 margin-right: var(--scale-48);
             }
         }
